# cargo-raze-examples

./: .gitignore  .travis.yml  README.md
bazel/: README.md  WORKSPACE
bazel/complicated_cargo_library/: BUILD  Cargo.toml  sanity_check.sh
bazel/complicated_cargo_library/cargo/: BUILD
bazel/complicated_cargo_library_remote/: BUILD  aho-corasick-0.6.4.BUILD  arrayvec-0.3.25.BUILD  arrayvec-0.4.7.BUILD  cgmath-0.16.0.BUILD  coco-0.1.1.BUILD  crates.bzl  derivative-1.0.0.BUILD  fnv-1.0.6.BUILD  fuchsia-zircon-0.3.3.BUILD  hibitset-0.3.2.BUILD  itertools-0.5.10.BUILD  memchr-2.0.1.BUILD  num-traits-0.1.43.BUILD  num-traits-0.2.0.BUILD  num_cpus-1.8.0.BUILD  pulse-0.5.3.BUILD  rand-0.3.20.BUILD  rand-0.3.22.BUILD  rand-0.4.2.BUILD  rayon-0.8.2.BUILD  rayon-core-1.3.0.BUILD  regex-0.2.5.BUILD  regex-0.2.6.BUILD  sanity_check.sh  shred-0.5.2.BUILD  shred-derive-0.3.0.BUILD  specs-0.10.0.BUILD  syn-0.10.8.BUILD  syn-0.11.11.BUILD  synom-0.11.3.BUILD  thread_local-0.3.5.BUILD  time-0.1.39.BUILD  unreachable-1.0.0.BUILD  utf8-ranges-1.0.0.BUILD  winapi-0.3.4.BUILD
bazel/complicated_cargo_library_remote/cargo/: BUILD  Cargo.toml  crates.bzl
bazel/complicated_cargo_library_remote/cargo/remote/: aho-corasick-0.6.4.BUILD  arrayvec-0.3.25.BUILD  crossbeam-deque-0.2.0.BUILD  crossbeam-epoch-0.3.0.BUILD  crossbeam-utils-0.2.2.BUILD  fuchsia-zircon-0.3.3.BUILD  hibitset-0.3.2.BUILD  memchr-2.0.1.BUILD  rayon-0.8.2.BUILD  rayon-core-1.4.0.BUILD  thread_local-0.3.5.BUILD  unreachable-1.0.0.BUILD
bazel/hello_cargo_library/: BUILD  Cargo.toml  README.md  sanity_check.sh
bazel/hello_cargo_library/cargo/: BUILD
bazel/non_cratesio_library/cargo/: BUILD
bazel/tools/bazel-ext/: grpc.bzl
bazel/tools/bazel-ext/proto/: BUILD  rust.bzl
bazel/tools/bazel-ext/rust/: codegen.bzl
bazel/using_protobuf/: README.md
bazel/using_protobuf/overrides/grpcio-sys-0.2.0/src/: lib.rs
bazel/using_protobuf/src/: BUILD  lib.rs
internal/: evaluate-local-raze.sh  pull-and-plan.sh  update-master.sh
internal/sources/complicated_cargo_library/: BUILD  Cargo.toml
internal/sources/complicated_cargo_library/cargo/: Cargo.toml
internal/sources/complicated_cargo_library/src/: main.rs
internal/sources/complicated_cargo_library_remote/: Cargo.toml
internal/sources/hello_cargo_library/: BUILD  Cargo.toml  sanity_check.sh
internal/sources/hello_cargo_library/cargo/: Cargo.toml
internal/sources/non_cratesio_library/: BUILD  sanity_check.sh
internal/sources/non_cratesio_library/cargo/: Cargo.toml
internal/sources/using_protobuf/: BUILD  Cargo.toml  interconnect.proto
internal/sources/using_protobuf/cargo/: Cargo.toml
internal/sources/using_protobuf/cargo/overrides/grpcio-sys-0.2.0/: BUILD
internal/sources/using_protobuf/overrides/grpcio-sys-0.2.0/: BUILD
