[package]
name = "compile_with_bazel"
version = "0.1.0"

[dependencies]
regex = "0.2.2"
specs = "0.10.0"
bindgen = "0.32.1"

[raze]
workspace_path = "//complicated_cargo_library"
target = "x86_64-unknown-linux-gnu"

[raze.crates.regex.'0.2.3']
skipped_deps = [
  # This will break the regex crate
  "regex-syntax-0.4.1"
]
additional_deps = [
  # Add an unused dep
  "//complicated_cargo_library/vendor:specs"
]
additional_flags = [
  # Add an unused flag
  "--cfg=not_used"
]

[raze.crates.clang-sys.'0.21.1']
gen_buildrs = true

[raze.crates.bindgen.'0.32.1']
gen_buildrs = true
extra_aliased_targets = [
  "cargo_bin_bindgen"
]
