[package]
name = "compile_with_bazel"
version = "0.1.0"

[lib]
path = "fake_lib.rs"

[dependencies]
regex = "0.2.5"
specs = "0.10.0"

[raze]
workspace_path = "//complicated_cargo_library_remote/cargo"
target = "x86_64-unknown-linux-gnu"
gen_workspace_prefix = "complicated"
genmode = "Remote"

[raze.crates.regex.'0.2.5']
skipped_deps = [
  # This will break the regex crate
  #"regex-syntax-0.4.2"
]
additional_deps = [
  # Add an unused dep
  "@complicated__specs__0_10_0//:specs"
]
additional_flags = [
  # Add an unused flag
  "--cfg=not_used"
]

[raze.crates.clang-sys.'0.21.1']
gen_buildrs = true
