[package]
name = "compile_with_bazel"
version = "0.0.0"

[dependencies]
futures = "0.1.17"
lazy_static = "0.2.11"
log = "0.3.8"
grpcio = "0.2.0"
protobuf = "1.4.3"
grpcio-proto = "0.2.0"

[lib]
path = "fake_lib.rs"

[raze]
workspace_path = "//using_protobuf"
target = "x86_64-unknown-linux-gnu"

[raze.crates.grpcio.'0.2.0']
skipped_deps = [
  "grpcio-sys-0.2.0",
  "protobuf-1.4.3"
]
additional_deps = [
  "@//using_protobuf/overrides/grpcio-sys-0.2.0:grpcio_sys",
  "@custom_rust_protobuf//:protobuf"
]

[raze.crates.grpcio-proto.'0.2.0']
skipped_deps = [
  "protobuf-1.4.3",
  "grpcio-compiler-0.2.0"
]
additional_deps = [
  "@custom_rust_protobuf//:protobuf",
  "@custom_rust_grpc_compiler//:grpcio_compiler",
]
gen_buildrs = true

[raze.crates.grpcio-compiler.'0.2.0']
skipped_deps = [
  "protobuf-1.4.3"
]
additional_deps = [
  "@custom_rust_protobuf//:protobuf"
]
extra_aliased_targets = [
  "cargo_bin_grpc_rust_plugin"
]

[raze.crates.protobuf.'1.4.3']
extra_aliased_targets = [
    "cargo_bin_protoc_gen_rust"
]
