[package]
name = "compile_with_bazel"
version = "0.1.0"

[dependencies]
regex = "0.2.5"
specs = "0.10.0"
# Evaluate data_attr
conduit-mime-types = "=0.7.3"
# Evaluate RUSTC build script flag
# ... via build dep on rustc_version
bigint = "=4.2.0"

[lib]
path = "fake_lib.rs"

[raze]
workspace_path = "//complicated_cargo_library/cargo"
target = "x86_64-unknown-linux-gnu"

[raze.crates.regex.'0.2.5']
skipped_deps = [
  # This will break the regex crate
  #"regex-syntax-0.4.2"
]
additional_deps = [
  # Add an unused dep
  "//complicated_cargo_library/cargo/vendor:specs"
]
additional_flags = [
  # Add an unused flag
  "--cfg=not_used"
]

[raze.crates.bigint.'4.2.0']
gen_buildrs = true

[raze.crates.crunchy.'0.1.6']
gen_buildrs = true

[raze.crates.conduit-mime-types.'0.7.3']
data_attr = "glob([\"data/**\"])"
